--- a/Extraction_Preprocess.ipynb
+++ b/Extraction_Preprocess.ipynb
@@ -483,7 +483,7 @@
     "# For loading the pkl files\n",
     "# images = pickle.load( open( dataset_name + \"_images_crop.pkl\", \"rb\" ) )\n",
     "# subjectsVideos = pickle.load( open( dataset_name + \"_subjectsVideos_crop.pkl\", \"rb\" ) )\n",
-    "# subjects = pickle.load( open( dataset_name + _\"subjects_crop.pkl\", \"rb\" ) )"
+    "# subjects = pickle.load( open( dataset_name + \"_subjects_crop.pkl\", \"rb\" ) )"
    ]
   },
   {
@@ -836,7 +836,8 @@
     "        y61=shape.part(28).y\n",
     "\n",
     "    #Compute Optical Flow Features\n",
-    "    optical_flow = cv2.DualTVL1OpticalFlow_create()\n",
+    "    # optical_flow = cv2.DualTVL1OpticalFlow_create() #Depends on cv2 version\n",
+    "    optical_flow = cv2.optflow.DualTVL1OpticalFlow_create()\n",
     "    flow = optical_flow.calc(img1, img2, None)\n",
     "    magnitude, angle = cv2.cartToPolar(flow[..., 0], flow[..., 1]) \n",
     "    u, v = pol2cart(magnitude, angle)\n",
@@ -941,7 +942,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.9"
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
